fix: button alignment in mobile view, props, and css design tree fixed

--- a/editor-components/intro-section/intro-section9/intro-section9.module.scss
+++ b/editor-components/intro-section/intro-section9/intro-section9.module.scss
@@ -20,6 +20,15 @@
 
         .subtitle {
           text-align: center;
+
+          transform: translateX(0);
+          &::before {
+            display: none;
+          }
+        }
+
+        .description {
+          text-align: center;
         }
 
         .action-buttons {
@@ -27,9 +36,7 @@
           display: flex;
           flex-direction: row;
           gap: var(--composer-gap-md);
-        }
 
-        .button-wrapper {
           .button {
             content: "";
             .button-text {
@@ -39,6 +46,22 @@
               display: flex;
               content: "";
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@container (max-width: #{$composer-tablet-width}) {
+  .container {
+    .max-content {
+      .card {
+        .content {
+          .action-buttons {
+            flex-direction: column;
+            align-items: center;
+            gap: var(--composer-gap-sm);
           }
         }
       }
